tests/sksl/errors/ReservedNameSampler.glsl
### Compilation failed:

error: 1: name 'sampler1DShadow' is reserved
int sampler1DShadow;
    ^^^^^^^^^^^^^^^
error: 2: name 'sampler2DRectShadow' is reserved
int sampler2DRectShadow;
    ^^^^^^^^^^^^^^^^^^^
error: 3: name 'sampler2DShadow' is reserved
int sampler2DShadow;
    ^^^^^^^^^^^^^^^
error: 4: name 'sampler3DRect' is reserved
int sampler3DRect;
    ^^^^^^^^^^^^^
error: 5: name 'samplerCube' is reserved
int samplerCube;
    ^^^^^^^^^^^
error: 7: name 'isampler1D' is reserved
int isampler1D;
    ^^^^^^^^^^
error: 8: name 'isampler2D' is reserved
int isampler2D;
    ^^^^^^^^^^
error: 9: name 'isampler3D' is reserved
int isampler3D;
    ^^^^^^^^^^
error: 10: name 'isampler1DArray' is reserved
int isampler1DArray;
    ^^^^^^^^^^^^^^^
error: 11: name 'isampler2DArray' is reserved
int isampler2DArray;
    ^^^^^^^^^^^^^^^
error: 12: name 'isampler2DRect' is reserved
int isampler2DRect;
    ^^^^^^^^^^^^^^
error: 13: name 'isampler2DMS' is reserved
int isampler2DMS;
    ^^^^^^^^^^^^
error: 14: name 'isampler2DMSArray' is reserved
int isampler2DMSArray;
    ^^^^^^^^^^^^^^^^^
error: 15: name 'isamplerBuffer' is reserved
int isamplerBuffer;
    ^^^^^^^^^^^^^^
error: 16: name 'isamplerCube' is reserved
int isamplerCube;
    ^^^^^^^^^^^^
error: 17: name 'isamplerCubeArray' is reserved
int isamplerCubeArray;
    ^^^^^^^^^^^^^^^^^
error: 19: name 'usampler1D' is reserved
int usampler1D;
    ^^^^^^^^^^
error: 20: name 'usampler2D' is reserved
int usampler2D;
    ^^^^^^^^^^
error: 21: name 'usampler3D' is reserved
int usampler3D;
    ^^^^^^^^^^
error: 22: name 'usampler1DArray' is reserved
int usampler1DArray;
    ^^^^^^^^^^^^^^^
error: 23: name 'usampler2DArray' is reserved
int usampler2DArray;
    ^^^^^^^^^^^^^^^
error: 24: name 'usampler2DRect' is reserved
int usampler2DRect;
    ^^^^^^^^^^^^^^
error: 25: name 'usampler2DMS' is reserved
int usampler2DMS;
    ^^^^^^^^^^^^
error: 26: name 'usampler2DMSArray' is reserved
int usampler2DMSArray;
    ^^^^^^^^^^^^^^^^^
error: 27: name 'usamplerBuffer' is reserved
int usamplerBuffer;
    ^^^^^^^^^^^^^^
error: 28: name 'usamplerCube' is reserved
int usamplerCube;
    ^^^^^^^^^^^^
error: 29: name 'usamplerCubeArray' is reserved
int usamplerCubeArray;
    ^^^^^^^^^^^^^^^^^
27 errors
